<resources>
    <string name="app_name">AppProtec</string>
    <string name="applications">Applications</string>
    <string name="settings">Settings</string>
    <string name="logs">Logs</string>
    <string name="license">License</string>
    <string name="saveWhitelist">Trust All</string>
    <string name="appInstalledTrusted">Installed, Trusted</string>
    <string name="appInstalledNotTrusted">Installed, Not Trusted</string>
    <string name="appNotInstalledTrusted">Not Installed but Trusted</string>
    <string name="saveButton">Save</string>
    <string name="trustNone">Trust None</string>
    <string name="appInstalled">Application Installed</string>
    <string name="untrustedAppFound">An untrusted application %s was found.</string>
    <string name="trusted">Trusted</string>
    <string name="removeApp">Remove</string>
    <string name="untrusted">Untrusted</string>
</resources>